# ds_template

./: .gitignore  .kaggleignore  CLAUDE.md  COMPETITION.md  EDA_SUMMARY.md  FEATURE_REPORT.md  FE_HYPOTHESES.md  PLAYBOOK.md  README.md  SESSION.md  TODO_TEMPLATE.md  dataset-metadata.json.template  pyproject.toml
.claude/rules/: experiment-tracking.md  notebook-conventions.md
.claude/skills/ds-eda-report/: SKILL.md
.claude/skills/ds-eda-visual/: SKILL.md
.claude/skills/ds-fe-hypothesis/: SKILL.md
.claude/skills/ds-kaggle-research/: SKILL.md
.claude/skills/ds-kaggle-submit/: SKILL.md
.claude/skills/ds-kickoff/: SKILL.md
.claude/skills/ds-new-experiment/: SKILL.md
.claude/skills/ds-resume/: SKILL.md
.claude/skills/ds-template-update/: SKILL.md
.claude/skills/eda-report/: SKILL.md
.claude/skills/eda-visual/: SKILL.md
.claude/skills/fe-hypothesis/: SKILL.md
.claude/skills/kaggle-research/: SKILL.md
.claude/skills/kaggle-submit/: SKILL.md
.claude/skills/kickoff/: SKILL.md
.claude/skills/new-experiment/: SKILL.md
.claude/skills/resume/: SKILL.md
.claude/skills/template-update/: SKILL.md
experiments/: log.csv
scripts/: blend.py  feature_report.py  feature_study.py  optimize_hp.py  predict.py  to_kaggle_nb.py  train.py  visualize.py
src/: config.py  experiment.py  feature_registry.py  hp_spaces.py  validation.py
src/utils/: ensemble.py  logger.py
