[project]
name = "ds-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=6.0.0",
    "catboost>=1.2",
    "flaml[automl]>=2.5.0",
    "kaggle>=1.6",
    "lightgbm>=4.6.0",
    "marimo>=0.20.4",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "optuna>=4.0",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "shap>=0.46",
    "torch>=2.11.0",
    "xgboost>=2.1",
]
